--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -278,6 +278,7 @@ article img {
 }
 
 .container-aside aside button {
+  margin-bottom: 20px;
   margin-top: 20px;
   margin-left: 20px;
   padding: 10px 50px;
@@ -452,12 +453,17 @@ article img {
 
 .slider li {
   width: 100%;
+  height: auto;
   list-style: none;
 }
 
 .slider img {
   width: 100%;
   height: 100%;
+}
+
+.marketing {
+  margin-top: 20px;
 }
 
 @-webkit-keyframes cambio {
@@ -511,6 +517,19 @@ article img {
   }
   100% {
     margin-left: -300%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .slider {
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .slider {
+    margin-top: 70px;
+    height: 300px;
   }
 }
 
