--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -239,6 +239,7 @@ article img {
 }
 
 .container-aside aside button {
+    margin-bottom: 20px;
     margin-top: 20px;
     margin-left: 20px;
     padding: 10px 50px;
@@ -377,6 +378,7 @@ article img {
     width: 100%;
     height: 700px;
     overflow: hidden;
+
 }
 
 .slider ul {
@@ -388,6 +390,7 @@ article img {
 
 .slider li{
     width: 100%;
+    height: auto;
     list-style: none;
 }
 
@@ -396,7 +399,9 @@ article img {
     height: 100%;
 
 }
-
+.marketing {
+    margin-top: 20px;
+}
 @keyframes cambio {
     0% {margin-left: 0;}
     20% {margin-left: 0;}
@@ -409,6 +414,19 @@ article img {
 
     75%{margin-left: -300%;}
     100%{margin-left: -300%;}
+}
+
+@media screen  and (max-width:900px) {
+    .slider {
+        height: 500px;
+    }
+}
+
+@media screen  and (max-width:400px) {
+    .slider {
+        margin-top: 70px;
+        height: 300px;
+    }
 }
 /*Contacto*/
 .form_wrap {
