--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -526,6 +526,12 @@ article img {
   }
 }
 
+@media screen and (max-width: 600px) {
+  .slider {
+    height: 400px;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .slider {
     margin-top: 70px;
